--- a/views/form.ejs
+++ b/views/form.ejs
@@ -25,7 +25,7 @@
 
         $form.addEventListener("submit", (e) => {
             e.preventDefault();
-            fetch("https://formsubmit.co/ajax/barriosjl2003@gmail.com", {
+            fetch("https://formsubmit.co/ajax/ffea554b3fefa66790118f99e60650a5", {
                 method: "POST",
                 body: new FormData(e.target)
             })
